3. 280820223 adding updated file python file

--- a/Group_Facilitator_Name.ipynb
+++ b/Group_Facilitator_Name.ipynb
@@ -1,9 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "859a0615-b9b7-4fbe-a2f6-95a8a3d94b73",
+   "metadata": {},
+   "source": [
+    "# Lending Club Case Study."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20850fca-2e86-4d1f-95f5-8b12501cbb90",
+   "id": "8e413a37-02b2-458e-aaee-aa51f9451e5f",
    "metadata": {},
    "outputs": [],
    "source": []
